--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "commit": "git cz"
   },
   "dependencies": {
+    "@t3-oss/env-core": "^0.7.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "husky": {
     "hooks": {
