--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
     "semantic-release": "^22.0.12",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
