--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint src --max-warnings=0",
     "typecheck": "bash -c tsc --noEmit --skipLibCheck",
     "prepare": "husky install && chmod +x .husky/*",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cov": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "commit": "git cz"
   },
   "dependencies": {
@@ -29,11 +34,15 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
+    "@testing-library/react": "^14.1.2",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.1.1",
+    "@vitest/ui": "^1.1.1",
     "autoprefixer": "^10.0.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8",
@@ -44,13 +53,16 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "jsdom": "^23.0.1",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "semantic-release": "^22.0.12",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^4.2.3",
+    "vitest": "^1.1.1"
   },
   "config": {
     "commitizen": {
