--- a/.github/workflows/run-unit.yaml
+++ b/.github/workflows/run-unit.yaml
@@ -1,10 +1,10 @@
 # .github/workflows/run-unit.yaml
 
-name: Run Vitest Test
+name: Run Unit Test
 on: [pull_request]
 
 jobs:
-  vitest-run:
+  test-unit-run:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
