--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "test:cov": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "cypress:open": "cypress open",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "test:e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
+    "test:component": "cypress open --component",
+    "test:component:headless": "cypress run --component",
     "commit": "git cz"
   },
   "dependencies": {
@@ -44,6 +49,7 @@
     "@vitest/coverage-v8": "^1.1.1",
     "@vitest/ui": "^1.1.1",
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.6.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
@@ -59,6 +65,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "semantic-release": "^22.0.12",
+    "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vite-tsconfig-paths": "^4.2.3",
