--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:cov": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "lint:report": "npx eslint . --format=json --output-file=eslint-report.json",
     "cypress:open": "cypress open",
     "test:e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
     "test:e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
