--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,8 +45,8 @@ jobs:
       - name: Run Testings          
         run: pnpm run test:cov
 
-      - name: Run EsLint
-        run: pnpm run lint:report
+      # - name: Run EsLint
+      #   run: pnpm run lint:report
         
 
       - name: SonarCloud Scan
