--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.tests=src
 sonar.test.inclusions=**/*.test.*,**/*.spec.*
 
 # Linting
-sonar.eslint.reportPaths=eslint-report.json
+# sonar.eslint.reportPaths=eslint-report.json
 
 # Code coverage
 sonar.javascript.coveragePlugin=lcov
