--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "commit": "git cz"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-core": "^0.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^10.17.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "^18",
@@ -71,6 +73,7 @@
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
+    "react-icons": "^4.12.0",
     "semantic-release": "^22.0.12",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.3.0",
