fix(ci): restringir ci do sonarQube apenas para o necessário

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,15 @@
 # .github/workflows/build.yaml
 
 name: Sonar Qube
-on: [pull_request]
+on: 
+  pull_request:
+    branches:
+      - develop
+  push:
+    branches:
+      - develop
+      - main
+
 
 jobs:
   sonarqube:
